mesa: TEXTURE_BUFFER fix-up

Fixes http://bugs.freedesktop.org/show_bug.cgi?id=36033